<resources>
    <string name="app_name">ClasesDSM</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_world">Hola mundo desde archivo String</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings from calculator -->
    <string name="number_1">number1</string>
    <string name="number_2">number2</string>
    <string name="buttonCalcular">Calcular</string>
    <string name="buttom1">Sumar</string>
    <string name="buttom2">Restar</string>
    <string name="buttom3">Multiplicar</string>
    <string name="buttom4">Dividir</string>
    <string name="title_activity_web">ActivityWeb</string>

</resources>